--- a/calculator.html
+++ b/calculator.html
@@ -6,15 +6,17 @@ function cube() {
 	var num = document.getElementById("n1");  
 	num.value = Math.pow(num.value, 3);
 }
-
 function seno() {  
 	var num = document.getElementById("n1");  
 	num.value = Math.sin(num.value);
 }
-
 function cuarta() {  
 	var num = document.getElementById("n1");  
 	num.value = Math.pow(num.value, 4);
+}
+function square() {  
+	var num = document.getElementById("n1");  
+	num.value = Math.pow(num.value, 2);
 }
 </script>
 </head>
@@ -26,6 +28,7 @@ function cuarta() {
 		<button onclick="cube()"> x^3 </button>  
 		<button onclick="cuarta()"> x^4 </button>  
 		<button onclick="seno()"> sin(x) </button>  
+		<button onclick="square()"> x^2 </button>  
 	</p>
 </body>
 </html>
